fix: adjust zindex so comments don't overlap controls

--- a/src/components/CommentPopover.scss
+++ b/src/components/CommentPopover.scss
@@ -5,7 +5,7 @@
 
 .comment-popover {
   position: absolute;
-  z-index: 1000;
+  z-index: 3;
   pointer-events: auto;
   transform: translate(0.5rem, -100%);
   margin-top: -1.25rem;
