--- a/src/hooks/useComment.scss
+++ b/src/hooks/useComment.scss
@@ -7,7 +7,7 @@
   position: absolute;
   inset: 0;
   pointer-events: none;
-  z-index: 4;
+  z-index: 3;
 }
 
 .comment-pin {
